# Taller_Python

./: Ejercicio_1.py  Ejercicio_10.py  Ejercicio_11.py  Ejercicio_12.py  Ejercicio_13.py  Ejercicio_14.py  Ejercicio_15.py  Ejercicio_2.py  Ejercicio_3.py  Ejercicio_4.py  Ejercicio_5.py  Ejercicio_6.py  Ejercicio_7.py  Ejercicio_8.py  Ejercicio_9.py  pyproject.toml
